:bug: Fix #12, remove overflow property on block parent

--- a/src/blocks/salary-data/editor.css
+++ b/src/blocks/salary-data/editor.css
@@ -1,4 +1,4 @@
-.wp-block[data-type="hrswpsqlsrv/salary-data"] {
+.wp-block[data-type="hrswpsqlsrv/salary-data"] .hrswp-sqlsrv-block {
 	overflow: auto;
 }
 
